--- a/index.html
+++ b/index.html
@@ -142,6 +142,111 @@
             *O preço pode variar caso a assinatura seja feita através de outras plataformas.
         </p>
     </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Imagem com Tv, Computador, tablet e celular">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio illo animi obcaecati accusamus illum esse ipsam, praesentium culpa dicta quaerat, odit at sit. Illo blanditiis tenetur doloremque impedit adipisci ullam?</p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-fill-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        <div class="image-text-section__text_container image-text-section--image-fill-width__text_container ">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio illo animi obcaecati accusamus illum esse ipsam,</p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrome OS</li>
+                    <li>Mac OS </li>
+                    <li>Pc Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="Computador">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li> Android TV </li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Computador">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5 </li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Computador">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Android </li>
+                    <li>IPhone e IPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title">Perguntas frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está inclído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big" >
+                    O Disney+ oferece:
+                    <ul>
+                        <li>Experiência de entretenimento exclusiva.</li>
+                        <li>As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar.</li>
+                        <li>Downloads ilimitados em até 10 dispositivos compatíveis.</li>
+                        <li>Mais de 300 títulos em 4K UHD e HDR.</li>
+                        <li>A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</li>
+                        <li>IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+                <div class="faq__questions__item__answer text--big" >
+                    Ao assinar o Combo+:
+                    <ul>
+                        <li>O valor da sua assinatura existente será descontado do preço do Combo+.</li>
+                        <li>Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+.</li>
+                        <li>Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o suporte do Disney+ para conhecer suas opções.</li>
+                        <li>Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.</li>
+                        <li>Lembre-se: você pode cancelar a assinatura quando quiser.</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Quais formas de pagamento posso utilizar?
+                </div>
+                <div class="faq__questions__item__answer text--big" >
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV, telefonia e internet.
+                </div>
+            </li>
+        </ul>
+    </section>
 
     <script src="./src/main.js"></script>
 </body>
