--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
+    <header class="header header--is-hidden">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a class="button button--secondary " href="#">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a class="button button--dark" href="#">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
-            <h1 class="hero__content__branding">
+            <div class="hero__content__branding">
                 <img src="./dist/images/disneyplus.svg" alt="Disney+">
-            </h1>
+            </div>
             <h3 class="title--small">
                 As melhores histórias em um só lugar.
             </h3>
@@ -23,7 +38,7 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="disney - + Star+ - Combo+">
-                    <button class="button">Assine Agora</button>
+                    <button class="button ">Assine Agora</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
@@ -150,7 +165,10 @@
         </div>
     </section>
     <section class="image-text-section image-text-section--image-fill-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png">
+            <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        </picture>
         <div class="image-text-section__text_container image-text-section--image-fill-width__text_container ">
             <h2 class="title">Baixe filmes e séries</h2>
             <p class="text--big">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio illo animi obcaecati accusamus illum esse ipsam,</p>
@@ -247,6 +265,50 @@
             </li>
         </ul>
     </section>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+        <ul class="footer__links"> 
+            <li class="footer__links__item">
+               <div class="language-selector">
+                <img src="./dist/images/icones/globe.svg" alt="Globo do mundo">
+                <select>
+                    <option>English</option>
+                    <option selected>Português</option>
+                </select>
+               </div>
+             </li>
+            <li class="footer__links__item">
+               <a href="#" class="text--small">Termos e Condições de Uso</a> 
+            </li>
+            <li class="footer__links__item">
+                <a href="#" class="text--small">Política de privacidade</a> 
+             </li>
+             <li class="footer__links__item">
+                <a href="#" class="text--small">Proteção de Dados no Brasil</a> 
+             </li>
+             <li class="footer__links__item">
+                <a href="#" class="text--small">Anúncios personalizados</a> 
+             </li>
+             <li class="footer__links__item">
+                <a href="#" class="text--small">Dispositivos compatíveis</a> 
+             </li>
+             <li class="footer__links__item">
+                <a href="#" class="text--small">Ajuda</a> 
+             </li>
+             <li class="footer__links__item">
+                <a href="#" class="text--small">Sobre O Disney+</a> 
+             </li>
+        </ul>
+        <p class="text--small">
+            ® 2024 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+        </p>
+        <p class="text--small">
+            Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+        </p>
+      </div>
+    </footer>
 
     <script src="./src/main.js"></script>
 </body>
