--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                 <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomen">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="Santa Clauses">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/willow.jpg" alt="Willow">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem limites">
             </li>
         </ul>
         <ul data-tab-id="populares" class="shows__list ">
@@ -89,19 +89,19 @@
                 <img src="./dist/images/mais_populares/obi_wan.jpg" alt="Obi wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/bluey.jpg" alt="bluey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleira da Lua">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/red.jpg" alt="Red">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="Dr pol">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="Tudo igual sqn">
             </li>
         </ul>
         <ul data-tab-id="star_plus" class="shows__list">
@@ -109,19 +109,19 @@
                 <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="Os simpsins">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="Belair">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="nba">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="Primier League">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="the kardashians">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="libertadores">
             </li>
         </ul>
     </section>
